# json-api-lib

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  json-api-lib.cabal
src/Network/: JSONApi.hs
src/Network/JSONApi/: Document.hs  Error.hs  Identifier.hs  Link.hs  Meta.hs  Pagination.hs  Resource.hs
test/: TestHelpers.hs
test/Network/JSONApi/: DocumentSpec.hs  ErrorSpec.hs  MetaSpec.hs  PaginationSpec.hs  ResourceSpec.hs
