cabal-version:       2.0

name:                json-api-lib
version:             0.1.0.0
homepage:            https://github.com/shirren/json-api-lib
bug-reports:         https://github.com/shirren/json-api-lib/issues
license:             MIT
license-file:        LICENSE
author:              Todd Mohney, Shirren Premaratne
copyright:           2016 Todd Mohney
category:            Network
build-type:          Simple
maintainer:          Shirren Premaratne
tested-with:         GHC == 8.4.3
synopsis:            Utilities for generating JSON-API payloads
description:
  Provides utilities for deriving JSON payloads conformant to the json-api
  specification

source-repository head
  type: git
  location: https://github.com/shirren/json-api-lib.git

library
  build-depends:  aeson
                  , base ^>=4.11 && <5.0
                  , containers
                  , data-default
                  , lens
                  , lens-aeson
                  , text
                  , unordered-containers
                  , uri-encode

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

  exposed-modules:
    Network.JSONApi
    Network.JSONApi.Error
    Network.JSONApi.Document
    Network.JSONApi.Identifier
    Network.JSONApi.Meta
    Network.JSONApi.Link
    Network.JSONApi.Resource

  other-modules:

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports

  hs-source-dirs: src

test-suite json-api-lib-test
  build-depends: aeson
               , aeson-pretty
               , base          >= 4.11 && < 5
               , bytestring
               , containers
               , data-default
               , hspec
               , json-api-lib
               , lens
               , lens-aeson
               , text
               , unordered-containers
               , uri-encode

  build-tool-depends: hspec-discover:hspec-discover == 2.*

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds

  hs-source-dirs: test

  main-is: Spec.hs

  other-modules:
    Network.JSONApi.ErrorSpec
    Network.JSONApi.DocumentSpec
    Network.JSONApi.IdentifierSpec
    Network.JSONApi.MetaSpec
    Network.JSONApi.ResourceSpec
    TestHelpers

  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/shirren/json-api-lib
